--- a/App.config
+++ b/App.config
@@ -11,4 +11,4 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-</configuration>
+<connectionStrings><add name="QLThuVien" connectionString="data source=LAPTOP-649HKO5E\ANHDUC;initial catalog=THUVIENMTA;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings></configuration>
