--- a/packages.config
+++ b/packages.config
@@ -5,6 +5,8 @@
   <package id="Bunifu.UI.WinForms.1.5.3" version="1.0.0" targetFramework="net472" />
   <package id="Costura.Fody" version="3.3.3" targetFramework="net472" />
   <package id="DevExpress.Data" version="22.1.6" targetFramework="net472" />
+  <package id="DevExpress.Xpo" version="22.1.6" targetFramework="net472" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
   <package id="Fody" version="4.0.2" targetFramework="net472" developmentDependency="true" />
   <package id="Guna.UI2.WinForms" version="2.0.3.5" targetFramework="net472" />
   <package id="Microsoft.Win32.Registry" version="5.0.0" targetFramework="net472" />
