--- a/QLThuVien.csproj
+++ b/QLThuVien.csproj
@@ -454,6 +454,12 @@
     <Compile Include="GUI_Admin\FrmThemDauSach.Designer.cs">
       <DependentUpon>FrmThemDauSach.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI_Khach\Hello_DauSach.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI_Khach\Hello_DauSach.Designer.cs">
+      <DependentUpon>Hello_DauSach.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI_Khach\Hello_TacGia.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -738,6 +744,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GUI_Admin\FrmThemDauSach.resx">
       <DependentUpon>FrmThemDauSach.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI_Khach\Hello_DauSach.resx">
+      <DependentUpon>Hello_DauSach.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI_Khach\Hello_TacGia.resx">
       <DependentUpon>Hello_TacGia.cs</DependentUpon>
